--- a/README
+++ b/README
@@ -12,7 +12,7 @@ it could be done in Python and for me to experiment with YAML.
 Does PunyMUD have a future? Maybe ... you decide!
 
 DOWNLOAD
-You can find the source at http://code.google.com/p/punymud/source
+You can find the source at https://github.com/paralax/punymud
 
 SYSTEM DEPENDENCIES
 Required
